--- a/booker/compose.yaml
+++ b/booker/compose.yaml
@@ -31,6 +31,9 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_DEBUG=${DJANGO_DEBUG}
+      - ENV=${ENV}
     volumes:
       - /tmp/app/mysqld:/run/mysqld
       - .:/app
