allow upload up to 100M set gunicorn timeout to 1200s

--- a/booker/docker-compose.yaml
+++ b/booker/docker-compose.yaml
@@ -44,7 +44,7 @@ services:
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
-             gunicorn --bind 0.0.0.0:8000 booker.wsgi --workers=2"
+             gunicorn --bind 0.0.0.0:8000 booker.wsgi --workers=2 --timeout=1200"
   nginx:
     image: sonpero/booker-nginx:1.1.1
     restart: always
