--- a/booker/nginx/default.conf
+++ b/booker/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 800 default_server;
     server_name _;
+    client_max_body_size 100M;
     location / {
         proxy_pass http://web:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
